clusters/my-cluster/apps/networking/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: traefik-dashboard-auth
  namespace: networking
spec:
  basicAuth:
    secret: traefik-dashboard-auth-secret
