clusters/my-cluster/apps/networking/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: networking
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik.seanzhong.com`)
      kind: Rule
      middlewares:
        - name: traefik-dashboard-basicauth
          namespace: networking
      services:
        - name: api@internal
          kind: TraefikService
